n8n-k3s-gcp/kubernetes/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    service: n8n
spec:
  type: ClusterIP
  ports:
    - name: "5678"
      port: 80
      targetPort: 5678
      protocol: TCP
  selector:
    service: n8n
